trad tab spacing fixes

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -69,3 +69,10 @@ a {
 	font-weight: 600!important;
 	font-size: 1rem!important;
 }
+
+.trade-tab-panel {
+	.MuiBox-root{
+	padding-left: 0!important;
+	padding-right: 0!important;
+}
+}
